
VERSION 0.7.1cvs
================

2005-04-30  Vincent Richard  <vincent@vincent-richard.net>

 * utility/childProcess.{hpp|cpp}: added a 'childProcess' class to help
   with spawning child processes (used in 'sendmail' implementation).

2005-04-28  Stefan Uhrig  <stefanuhrig@gmx.net>

 * README.msvc: added guide describing how to compile VMime using
   Visual Studio .NET 2003

2005-04-27  Vincent Richard  <vincent@vincent-richard.net>

 * progressionListener.{hpp|cpp}: moved to 'vmime::utility' package since
   this can be of general use.

 * stream.{hpp|cpp}: added a bufferedStreamCopy() function which can
   take a 'progressionListener' parameter.

 * filteredStream.{hpp|cpp}: new feature added: filtered input and
   output streams.

 * Added 'sendmail' transport service for local delivery.

2005-04-19  Vincent Richard  <vincent@vincent-richard.net>

 * defaultParameter.cpp: fixed a bug in implementation of RFC-2231 (values
   were cut if longer than maxLineLength, and no line wrapping occured).

2005-04-15  Vincent Richard  <vincent@vincent-richard.net>

 * url.{hpp|cpp}, urlUtils.{hpp|cpp}: fixed a lot of bugs in URLs parsing
   and encoding/decoding + added unit tests.

2005-04-14  Vincent Richard  <vincent@vincent-richard.net>

 * url.{hpp|cpp}, urlUtils.{hpp|cpp}: moved 'url' and 'urlUtils' from
   'vmime::messaging' namespace to 'vmime::utility' namespace.

2005-04-12  Vincent Richard  <vincent@vincent-richard.net>

 * Started version 0.7.1.


VERSION 0.7.0
=============

2005-04-12  Vincent Richard  <vincent@vincent-richard.net>

 * parameter.{cpp|hpp}, contentDispositionField.{cpp|hpp}: added support
   for RFC-2231 (encoded word extensions). Changed 'filename' parameter
   type from 'vmime::string' to 'vmime::word'. Default parameter type is
   now vmime::word, and not vmime::string.

2005-04-09  Vincent Richard  <vincent@vincent-richard.net>

 * encoderB64.cpp: fixed a bug in Base64 decoding. Bytes to be decoded
   were not correctly initialized.
