@@ -2,6 +2,11 @@
 VERSION 0.7.1cvs
 ================
 
+2005-05-03  Vincent Richard  <vincent@vincent-richard.net>
+
+ * messaging/imap/IMAPFolder.cpp: fixed missing space in "STATUS" command +
+   parsing error in 'status_info'.
+
 2005-04-30  Vincent Richard  <vincent@vincent-richard.net>
 
  * utility/childProcess.{hpp|cpp}: added a 'childProcess' class to help
